# OrbitSimulator

./: CMakeLists.txt  README.md
examples/: 00-Newtons-First-Law.cpp  01-Simple-Orbit.cpp
include/: api.h  constants.h  controller.h  eigen-utils.h  forces.h  object.h  observer.h  type-definitions.h  world.h
scripts/: build-and-install.sh  build.sh  plotter.py
src/: constants.cpp  controller.cpp  forces.cpp  object.cpp  observers.cpp  world.cpp
